@@ -1,3 +1,13 @@
+2012-06-04  Filip Pizlo  <fpizlo@apple.com>
+
+        DFG CFG simplification should correct the variables at the head of the predecessor block
+        https://bugs.webkit.org/show_bug.cgi?id=88284
+
+        Reviewed by Geoffrey Garen.
+
+        * dfg/DFGCFGSimplificationPhase.cpp:
+        (JSC::DFG::CFGSimplificationPhase::mergeBlocks):
+
 2012-06-04  Geoffrey Garen  <ggaren@apple.com>
 
         Unreviewed.
